added jacoco plugin and conf